--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ body {
   margin: 0 auto;
   text-align: center;
   padding-top: 118px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/HERO.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/HERO.jpg");
   background-color: #c4c4c4;
   background-repeat: no-repeat;
   background-position: center;
